--- a/sdp_parasite_sim_testing_p1_nb.Rmd
+++ b/sdp_parasite_sim_testing_p1_nb.Rmd
@@ -42,8 +42,8 @@ test_sims_df <- bind_rows(test_sims, .id = "sim_id")
 ## summarize by simulation and timepoint
 test_summary <- test_sims_df %>%
   group_by(sim_id, time) %>%
-  summarise(mean_burden = mean(parasite_burden),
-            var_burden = var(parasite_burden),
+  summarise(mean_burden = mean(cum_burden),
+            var_burden = var(cum_burden),
             disp_burden = var_burden / mean_burden)
 
 ## plot summary stat by time
@@ -57,11 +57,11 @@ Looks like the variance among simulations doesn't decline with timesteps, but th
 But does that level off happen similarly for other clustering factors?
 
 ```{r}
-test_ls <- fast_ls_perc(size = 24, prop = 0.2, cluster = 20)
+test_ls <- fast_ls_perc(size = 48, prop = 0.1, cluster = 15)
 
 ## now many
 test_sims <- replicate(10, 
-                       parasite_sim(landscape = test_ls, n_hosts = 48, n_moves = 1000),
+                       parasite_sim(landscape = test_ls, n_hosts = 96, n_moves = 1000),
                        simplify = FALSE)
 
 ## make df with id
@@ -70,13 +70,13 @@ test_sims_df <- bind_rows(test_sims, .id = "sim_id")
 ## summarize by simulation and timepoint
 test_summary <- test_sims_df %>%
   group_by(sim_id, time) %>%
-  summarise(mean_burden = mean(parasite_burden),
-            var_burden = var(parasite_burden),
+  summarise(mean_burden = mean(cum_burden),
+            var_burden = var(cum_burden),
             disp_burden = var_burden / mean_burden)
 
 ## plot summary stat by time
 ggplot(data = test_summary) +
-  geom_line(aes(x = time, y = disp_burden))
+  geom_point(aes(x = time, y = disp_burden))
 ```
 
 The level off point increases with clustering. Select an end point that for the max clustering used. Let's go with 300 for cluster = 20.
