futzing with axis labels

--- a/sdp_figs_for_eeid23.qmd
+++ b/sdp_figs_for_eeid23.qmd
@@ -42,7 +42,8 @@ fig1 <- ggplot(f1_data, aes(x = moran, y = disp_cur, color = factor(prop))) +
   facet_wrap(vars(recov_prob)) +
   scale_color_viridis_d(name = "Parasite Density \n(Proportion Cells Occupied)") +
   labs(y = "'Snapshot' Burden Dispersion") +
-  scale_x_continuous(name = "Parasite Clustering (Moran's I)", 
+  scale_x_continuous(name = "Parasite Clustering (Moran's I)",
+                     breaks = c(0, 0.06, 0.12, 0.18),
                      sec.axis = sec_axis(~ . , name = "Recovery Rate", 
                                          breaks = NULL, labels = NULL)) +
   theme_bw() +
@@ -75,7 +76,8 @@ fig2 <- ggplot(cors, aes(x = moran, y = estimate)) +
   facet_wrap(vars(recov_prob)) +
   scale_color_viridis_d(name = "Parasite Density \n(Proportion Cells Occupied)") +
   labs(y = "Correlation between 'Snapshot' \nand Cumulative Burden") +
-  scale_x_continuous(name = "Parasite Clustering (Moran's I)", 
+  scale_x_continuous(name = "Parasite Clustering (Moran's I)",
+                     breaks = c(0, 0.06, 0.12, 0.18),
                      sec.axis = sec_axis(~ . , name = "Recovery Rate", 
                                          breaks = NULL, labels = NULL)) +
   theme_bw() +
